# LDtkViewer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
imgui/: imconfig.cpp  imconfig.h  imgui_custom.cpp  imgui_custom.h
res/: WorldMap_GridVania_layout.ldtk  gridvania.ldtk  level.ldtk
sogl/: Event.cpp  Event.hpp  Log.cpp  Shader.cpp  Shader.hpp  Shader.tpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  Window.cpp  Window.hpp
src/: App.cpp  App.hpp  AppImGui.cpp  AppImGui.hpp  Camera2D.cpp  Camera2D.hpp  Config.hpp  Event.cpp  LDtkProject.cpp  LDtkProject.hpp  LDtkProjectData.hpp  LDtkProjectVariables.hpp  LDtkViewer.html  Layer.cpp  Layer.hpp  Log.hpp  Texture.cpp  TextureManager.cpp  TextureManager.hpp  VertexArray.cpp  VertexArray.hpp  Window.cpp  Window.hpp  main.cpp
src/LDtkProject/: LDtkProject.cpp  LDtkProject.hpp  LDtkProjectDrawables.cpp  LDtkProjectDrawables.hpp  LDtkProjectObjects.cpp  LDtkProjectObjects.hpp  ldtk2glm.hpp
